forgot password + otp done successfully

--- a/food-delivery-app/src/main/resources/application.properties
+++ b/food-delivery-app/src/main/resources/application.properties
@@ -5,13 +5,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true          
-# easier to watch DDL
-# REMOVE the line below ⬇️ – it blocks metadata reading
-# spring.jpa.properties.hibernate.boot.allow_jdbc_metadata_access=false
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=nabimoon7864@gmail.com
-spring.mail.password=${spring.mail.password}  # now fetched from secret file
+
+
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+spring.config.import=optional:classpath:application-secret.yaml
+
