--- a/food-delivery-app/.gitignore
+++ b/food-delivery-app/.gitignore
@@ -3,7 +3,9 @@ target/
 .mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
-src/main/resources/application-secret.properties
+
+src/main/resources/application-secret.yml
+
 
 
 ### STS ###
